2004-11-26 Braden McDaniel  <braden@endoframe.com>

	Backed out incomplete change to remove conformance test results
	table from the generated documentation (from 2004-07-06).

	* doc/Doxyfile.in
	* doc/Makefile.am
	* doc/doxygen-header

2004-11-26 Braden McDaniel  <braden@endoframe.com>

	Incremented library version numbers for imminent 0.15.0 release.

	* src/libopenvrml/Makefile.am
	* src/libopenvrml-gl/Makefile.am

2004-11-26 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in:  Changed Mozilla plug-in RPM name to
	openvrml-mozilla-plugin; refer to the plug-in in comments as
	"for Mozilla-based browsers" rather than "for Mozilla".

2004-11-26 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/Makefile.am:  Install the plug-in in
	$(libdir)/mozilla/plugins, not $(prefix)/mozilla/plugins.

2004-11-26 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Added dependencies for documentation
	generation.

2004-11-25 Braden McDaniel  <braden@endoframe.com>

	Fixes for distcheck.

	* configure.ac:  Pass subdir-objects argument to
	AM_INIT_AUTOMAKE; exposed XPIDL and XPIDLFLAGS to the user with
	AC_ARG_VAR.
	* doc/Doxyfile.in:  Updated for Doxygen 1.3.9.1;
	changed SORT_MEMBER_DOCS to NO; changed SHORT_NAMES to YES.
	* doc/Makefile.am:  Make distcheck happy.
	* ide-projects/Makefile.am:  Remove lingering reference to regex
	library.
	* mozilla-plugin/configure.ac:  Convey flags required for xpidl
	as MOZILLA_XPIDLFLAGS; exposed XPIDL and XPIDLFLAGS to the user
	with AC_ARG_VAR.
	* mozilla-plugin/src/Makefile.am:  Use $(libdir)/mozilla/plugins
	as the Mozilla plug-in directory, rather than hard coding the
	value based on mozilla-plugin.pc; invoke xpidl with XPIDLFLAGS.

2004-11-25 Braden McDaniel  <braden@endoframe.com>

	* doc/conformance.doc:  Miscellaneous updates.

2004-11-24 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc
	(gtk_vrml_browser_destroy):  Removed calls to
	gtk_main_iteration.
