@@ -3,8 +3,8 @@
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
-PROJECT_NAME           = @PACKAGE_NAME@
-PROJECT_NUMBER         = @PACKAGE_VERSION@
+PROJECT_NAME           = OpenVRML
+PROJECT_NUMBER         = 0.14.99
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -68,10 +68,10 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @srcdir@/index.doc \
-                         @srcdir@/conformance.doc \
-                         @top_srcdir@/src/libopenvrml \
-                         @top_srcdir@/src/libopenvrml-gl
+INPUT                  = index.doc \
+                         conformance.doc \
+                         ../src/libopenvrml \
+                         ../src/libopenvrml-gl
 FILE_PATTERNS          = *.cpp \
                          *.h
 RECURSIVE              = YES
@@ -106,10 +106,10 @@ IGNORE_PREFIX          =
 # configuration options related to the HTML output
 #---------------------------------------------------------------------------
 GENERATE_HTML          = YES
-HTML_OUTPUT            = @srcdir@/manual
+HTML_OUTPUT            = manual
 HTML_FILE_EXTENSION    = .html
-HTML_HEADER            = @srcdir@/doxygen-header
-HTML_FOOTER            = @srcdir@/doxygen-footer
+HTML_HEADER            = doxygen-header
+HTML_FOOTER            = doxygen-footer
 HTML_STYLESHEET        = 
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = NO
